<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:layout_marginBottom="16dp"

        >

        <ImageButton

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@color/white"
            />


        <TextView

            android:layout_width="289dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:paddingLeft="25dp"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/roundbg"

            android:src="@drawable/ic_baseline_search_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="323dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="323dp"
                android:layout_height="142dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:src="@mipmap/roman_foreground"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"/>

                <LinearLayout
                    android:layout_width="323dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/roman"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twodays" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="75dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="332dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="24dp"
                android:text="@string/checkout"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/replays"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="10sp"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:paddingRight="269dp"/>

            <ImageButton

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:background="none"
                android:src="@drawable/ic_outline_thumb_up_24" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="323dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="323dp"
                android:layout_height="142dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:src="@mipmap/tina_foreground" />

                <LinearLayout
                    android:layout_width="323dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/tina"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mins" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="332dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="24dp"
                android:text="@string/into"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingTop="5dp"
                android:paddingRight="269dp"
                android:text="@string/replays"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="10sp"
                android:textStyle="bold" />

            <ImageButton

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:background="none"
                android:src="@drawable/ic_outline_thumb_up_24" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="323dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="323dp"
                android:layout_height="142dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:src="@mipmap/ic_avatar3_foreground" />

                <LinearLayout
                    android:layout_width="323dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/tomek"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twodays" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="332dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="24dp"
                android:text="@string/into"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingTop="5dp"
                android:paddingRight="269dp"
                android:text="@string/replays"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="10sp"
                android:textStyle="bold" />

            <ImageButton

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:background="none"
                android:src="@drawable/ic_outline_thumb_up_24" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"

        >

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="48dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_shopping_bag_24" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="48dp"
            android:background="@color/white"
            android:src="@drawable/ic_sharp_menu_book_24" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="48dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_shopping_cart_24" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_discount_24" />

        <ImageButton

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_favorite_24"
            android:layout_marginTop="-8dp"

            />


    </LinearLayout>

    <TextView
        android:layout_width="118dp"
        android:layout_height="23dp"
        android:layout_marginTop="-28dp"
        android:layout_marginLeft="325dp"
        android:textColor="@color/blue"
        android:text="@string/acc" />



</LinearLayout>